--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
                     <div class="slidearea">
                         <h1>Design is about </br> <span>Communication</span></h1>
                         <h2>Call Us: +00 0 1234 5678</h2>
-                        <a href="">Get in touch!</a>
+                        <a href="" class="button">Get in touch!</a>
                     </div>
                 </div><div class="slide">
                     <div class="slidearea">
                         <h1>Design is about </br> <span>Page 2</span></h1>
                         <h2>Call Us: +00 0 1234 5678</h2>
-                        <a href="">Get in touch!</a>
+                        <a href="" class="button">Get in touch!</a>
                     </div>
                 </div><div class="slide">
                     <div class="slidearea">
                         <h1>Design is about </br> <span>Page 3</span></h1>
                         <h2>Call Us: +00 0 1234 5678</h2>
-                        <a href="">Get in touch!</a>
+                        <a href="" class="button">Get in touch!</a>
                     </div>
                 </div>
             </div>
@@ -64,6 +64,205 @@
                 <div class="pointer"></div>
             </div>
         </section>
+        
+        <section class="default light">
+            <div class="section-title">About us</div>
+            <div class="section-desc">Who we are</div>
+            <div class="section-body">
+                <div class="section-aboutus">
+                    <div class="section-aboutus--left">
+                        <p>Lorem Ipsum é simplesmente uma simulação de texto da
+                        indústria tipográfica e de impressos, e vem sendo utilizado
+                        desde o século XVI, quando um impressor desconhecido pegou
+                        uma bandeja de tipos e os embaralhou para fazer um livro de
+                        modelos de tipos. Lorem Ipsum sobreviveu não só a cinco
+                        séculos, como também ao salto para a editoração eletrônica,
+                        permanecendo essencialmente inalterado.</p> 
+
+                        <br/>
+                        <a href="" class="button">Learn More</a>
+                    </div>
+                    <div class="section-aboutus--right">
+                        <img src="media/foto9.jpg" alt="Image">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="default dark">
+            <div class="section-title">Services</div>
+            <div class="section-desc">Services that we provide</div>
+            <div class="section-body">
+                <div class="section-services">
+                    <div class="section-service">
+                        <img src="assets/images/medalha.png" alt="Medalha">
+                        <h4>High Quality Design</h4>
+                        <p>Descrition</p>
+                    </div>
+
+                    <div class="section-service">
+                        <img src="assets/images/estrela.png" alt="Estrela">
+                        <h4>Modern Design</h4>
+                        <p>Descrition</p>
+                    </div>
+
+                    <div class="section-service">
+                        <img src="assets/images/relogio.png" alt="Relógio">
+                        <h4>Regular Updates</h4>
+                        <p>Descrition</p>
+                    </div>
+
+                    <div class="section-service">
+                        <img src="assets/images/balao.png" alt="Balão">
+                        <h4>Fast and free support</h4>
+                        <p>Descrition</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="default light">
+            <div class="section-title">Our Projects</div>
+            <div class="section-desc">What we create</div>
+            <div class="section-body">
+                <div class="section-projects">
+                    <div class="section-projects--filters">
+                        <ul>
+                            <li class="active">All</li>
+                            <li>Photos</li>
+                            <li>Branding</li>
+                            <li>Adverts</li>
+                            <li>Development</li>
+                            <li>Misc</li>
+                        </ul>
+                    </div>
+
+                    <div class="section-project--photos">
+                        <div class="section-project--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>About</h5>
+                                    <p>Lorem Ipsum é simplesmente</p>
+                                </div>
+                                <img src="media/foto1.jpg" alt="Image">
+                            </div>
+                        </div>
+                            
+                        <div class="section-project--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>About</h5>
+                                    <p>Lorem Ipsum é simplesmente</p>
+                                </div>
+                                <img src="media/foto2.jpg" alt="Image">
+                            </div>
+                        </div>
+
+                        <div class="section-project--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>About</h5>
+                                    <p>Lorem Ipsum é simplesmente</p>
+                                </div>
+                                <img src="media/foto3.jpg" alt="Image">
+                            </div>
+                        </div>
+
+                        <div class="section-project--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>About</h5>
+                                    <p>Lorem Ipsum é simplesmente</p>
+                                </div>
+                                <img src="media/foto4.jpg" alt="Image">
+                            </div>
+                        </div>
+
+                        <div class="section-project--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>About</h5>
+                                    <p>Lorem Ipsum é simplesmente</p>
+                                </div>
+                                <img src="media/foto5.jpg" alt="Image">
+                            </div>
+                        </div>
+
+                        <div class="section-project--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>About</h5>
+                                    <p>Lorem Ipsum é simplesmente</p>
+                                </div>
+                                <img src="media/foto6.jpg" alt="Image">
+                            </div>
+                        </div>
+
+                        <div class="section-project--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>About</h5>
+                                    <p>Lorem Ipsum é simplesmente</p>
+                                </div>
+                                <img src="media/foto7.jpg" alt="Image">
+                            </div>
+                        </div>
+
+                        <div class="section-project--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>About</h5>
+                                    <p>Lorem Ipsum é simplesmente</p>
+                                </div>
+                                <img src="media/foto9.jpg" alt="Image">
+                            </div>
+                        </div>
+
+                        <div class="section-project--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>About</h5>
+                                    <p>Lorem Ipsum é simplesmente</p>
+                                </div>
+                                <img src="media/foto1.jpg" alt="Image">
+                            </div>
+                        </div>
+
+                        <div class="section-project--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>About</h5>
+                                    <p>Lorem Ipsum é simplesmente</p>
+                                </div>
+                                <img src="media/foto2.jpg" alt="Image">
+                            </div>
+                        </div>
+
+                        <div class="section-project--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>About</h5>
+                                    <p>Lorem Ipsum é simplesmente</p>
+                                </div>
+                                <img src="media/foto3.jpg" alt="Image">
+                            </div>
+                        </div>
+
+                        <div class="section-project--photo">
+                            <div class="section-projects--photoarea">
+                                <div class="section-projects--photoinfo">
+                                    <h5>About</h5>
+                                    <p>Lorem Ipsum é simplesmente</p>
+                                </div>
+                                <img src="media/foto4.jpg" alt="Image">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
     </main>
 
 </body>
