--- a/index.html
+++ b/index.html
@@ -258,6 +258,41 @@
                             </div>
                         </div>
                     </div>
+
+                    <a href="" class="button">More Projects</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="default dark bg-team">
+            <div class="section-team-area">
+                <div class="section-title">Our Team</div>
+                <div class="section-desc">Our co-workers</div>
+                <div class="section-body">
+                    <div class="section-team">
+                        <div class="sliders" style="margin-left: 0vw;">
+                            <div class="slide">
+                                <div class="slidearea">
+                                    ...
+                                </div>
+                            </div><div class="slide">
+                                <div class="slidearea">
+                                    ...
+                                </div>
+                            </div><div class="slide">
+                                <div class="slidearea">
+                                    ...
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="sliders-pointers">
+                        <div class="pointer active"></div>
+                        <div class="pointer"></div>
+                        <div class="pointer"></div>
+                    </div>
+
                 </div>
             </div>
         </section>
