--- a/index.html
+++ b/index.html
@@ -625,6 +625,47 @@
             </div>
         </section>
 
+        <section class="section-map">
+            <div class="section-map--area">
+                <div class="section-map-info">
+                    <div class="section-mp-info-item">
+                        <div class="section-mp-info-item-img">
+                            <img src="assets/images/carta.png" alt="">
+                        </div>                        
+                        Endereço de algum lugar da terra
+                    </div>
+                    
+                    <div class="section-mp-info-item">
+                        <div class="section-mp-info-item-img">
+                            <img src="assets/images/localizacao.png" alt="">
+                        </div>                        
+                        Endereço de algum lugar da terra
+                    </div>
+
+                    <div class="section-mp-info-item">
+                        <div class="section-mp-info-item-img">
+                            <img src="assets/images/telefone.png" alt="">
+                        </div>                        
+                        Endereço de algum lugar da terra
+                    </div>
+
+                    <div class="section-mp-info-item">
+                        <div class="section-mp-info-item-img">
+                            <img src="assets/images/arroba.png" alt="">
+                        </div>                        
+                        Endereço de algum lugar da terra
+                    </div>
+
+                    <div class="section-mp-info-item">
+                        <div class="section-mp-info-item-img">
+                            <img src="assets/images/web.png" alt="">
+                        </div>                        
+                        Endereço de algum lugar da terra
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <footer>
             <div class="footer">
 
