--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1.0">
     <title>Awax</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -17,6 +17,7 @@
             </div>
 
             <div class="menu">
+                <img class="menu-opener" src="assets/images/menu.png" alt="">
                 <nav>
                     <ul>
                         <li class="active"><a href="">Home</a></li>
@@ -571,25 +572,28 @@
                     <img src="assets/images/share.png" alt="share">
                     <h1>Tell About us</h1>
                 </div>
-                <div class="icon">
-                    <a class="icon-a--img" href=""><img src="assets/images/twitter.png" alt="Twitter"></a>
-                    <p>152</p>
-                </div>
-                <div class="icon">
-                    <a class="icon-a--img1" href=""><img src="assets/images/linkedin.png" alt="Linkedin"></a>
-                    <p>152</p>
-                </div>
-                <div class="icon">
-                    <a class="icon-a--img2" href=""><img src="assets/images/facebook.png" alt="Facebook"></a>
-                    <p>152</p>
-                </div>
-                <div class="icon">
-                    <a class="icon-a--img3" href=""><img src="assets/images/googleplus.png" alt="Google"></a>
-                    <p>152</p>
-                </div>
-                <div class="icon">
-                    <a class="icon-a--img4" href=""><img src="assets/images/pinterest.png" alt="Pinterest"></a>
-                    <p>152</p>
+
+                <div class="icon-area">
+                    <div class="icon">
+                        <a class="icon-a--img" href=""><img src="assets/images/twitter.png" alt="Twitter"></a>
+                        <p>152</p>
+                    </div>
+                    <div class="icon">
+                        <a class="icon-a--img1" href=""><img src="assets/images/linkedin.png" alt="Linkedin"></a>
+                        <p>152</p>
+                    </div>
+                    <div class="icon">
+                        <a class="icon-a--img2" href=""><img src="assets/images/facebook.png" alt="Facebook"></a>
+                        <p>152</p>
+                    </div>
+                    <div class="icon">
+                        <a class="icon-a--img3" href=""><img src="assets/images/googleplus.png" alt="Google"></a>
+                        <p>152</p>
+                    </div>
+                    <div class="icon">
+                        <a class="icon-a--img4" href=""><img src="assets/images/pinterest.png" alt="Pinterest"></a>
+                        <p>152</p>
+                    </div>
                 </div>
             </div>
         </section>
